--- a/_layouts/gdoc.html
+++ b/_layouts/gdoc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  {% include head.html %}
+  {% include gdoc_head.html %}
 
   <body class="layout-reverse sidebar-overlay theme-base-0k">
 
@@ -19,7 +19,7 @@
         </div>
       </div>
 
-      <div class="container content">
+      <div class="gdoc">
         {{ content }}
       </div>
     </div>
