--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -537,6 +537,11 @@ a.pagination-item:hover {
   color: #8f5536;
 }
 
+/* Docs */
+.theme-base-0k .container a,
+{
+  /*color: #ac4142;*/
+}
 
 /*
  * Overlay sidebar
@@ -561,3 +566,4 @@ a.pagination-item:hover {
 .layout-reverse.sidebar-overlay #sidebar-checkbox:checked ~ .sidebar {
   box-shadow: -.25rem 0 .5rem rgba(0,0,0,.1);
 }
+
